finish exo 3 and 6

--- a/templates/article/add.html.twig
+++ b/templates/article/add.html.twig
@@ -8,7 +8,7 @@
     <a class="btn btn-info my-4" href="{{ path('article') }}">Retour à l'accueil</a>
     {{ form_start(form) }}
     {{ form_widget(form) }}
-    <a class="btn btn-info">Créér</a>
+    <button class="btn btn-info">Créér</button>
     {{ form_end(form) }}
 </div>
 {% endblock %}
