--- a/templates/article/single.html.twig
+++ b/templates/article/single.html.twig
@@ -3,9 +3,19 @@
 {% block title %}Page single!{% endblock %}
 
 {% block body %}
-<div class="example-wrapper">
+<div class="m-4">
     <h1>{{ controller_name }}!</h1>
-    <p>{{ article.titre }}</p>
-    <p>{{ article.auteur }}</p>
+    <a class="btn btn-info my-4" href="{{ path('article') }}">Retour à l'accueil</a>
+</div>
+<div class="card text-center m-4">
+    <div class="card-header bg-info text-white">
+        <h2>{{ article.titre }}</h2>
+    </div>
+    <div class="card-body">
+      <h5 class="card-title border-bottom">{{ article.auteur }}</h5>
+      <p class="card-text">{{ article.contenu }}</p>
+      <p class="card-text">Catégorie : {{ article.categorie }} ~~~ Nombre de vues : {{ article.nombreVues }}</p>
+
+    </div>
 </div>
 {% endblock %}
