--- a/templates/article/single.html.twig
+++ b/templates/article/single.html.twig
@@ -13,6 +13,7 @@
     </div>
     <div class="card-body">
       <h5 class="card-title border-bottom">{{ article.auteur }}</h5>
+      <p>{{ article.dateAt|date("d-m-Y") }}</p>
       <p class="card-text">{{ article.contenu }}</p>
       <p class="card-text">Catégorie : {{ article.categorie }} ~~~ Nombre de vues : {{ article.nombreVues }}</p>
 
